k8s/apps/karakeep/app/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
